--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -164,6 +164,19 @@ r (reference, both alleles are ref)
 c (compound, at least one allele in alt, the other is not ref),
 o (other, at least one allele is not ref, but none are in alt)
 u (unsequenced)
+; transcripts(geneset,filter,type): returns the list of transcript names
+affected by a variant for the given gene set, potentially filter by impact
+type. 
+**geneset** is the base name of the gene annotation, e.g. when it is
+"refGene", the field "refGene_descr" will be used to extract the transcipt
+names, "refGene_gene" for the gene name and "refGene_impact" for the
+filtering. If **filter** is given (a comma separated list if impacts),
+only transcripts where the variant has one of the given impacts are
+returned. You can use wildcards and > to select multiple impacts in the
+filter (e.g. CDS* for CDS impacts and >=CDSmis for anything at the level
+of missense and higher in the list).
+**type** determines what is returned: t for only transcipt name, gt for
+gene and transcript name and g for only the gene name.
 
 === Number functions ===
 ; **between(value,{min max})** or **between(value,min,max)**: true of value is >= min and <= max (e.g. "between($begin,1000,2000)")
